fix: catalog hero subcategories position on mobile version

--- a/src/components/catalog-hero/catalog-hero.scss
+++ b/src/components/catalog-hero/catalog-hero.scss
@@ -57,6 +57,7 @@
             gap: 8px;
             margin: 30px var(--negative-container-px) 0;
             padding: 0 var(--container-px);
+            align-self: flex-start;
             overflow-x: auto;
             @include utils.transparent-scroll;
 
